# ai-agents

./: .gitignore  README.md  pyproject.toml
agent-evaluation/: 001_agents_thru_function_calling.ipynb  002_agent_instrumentation.ipynb  003_router_skill_evaluation.ipynb  004_trajectory_evaluation.ipynb  005_e2e_evaluation.ipynb
browser-agents/: 001_Playwright_Intro.ipynb  002_book_flight_ticket.ipynb  003_Montecarlo_Tree_Search.ipynb  display_completion_usage.py  helper.py
crewai/data/: lead_gen_crew.json  personalized_stories_crew.json  stock_trading_crew.json
crewai/notebooks/: 001_main.ipynb
llm-apps/: 001_models_prompts_parsers.ipynb  002_memory.ipynb  003_documents.ipynb
multimodal-rag/: L3_Preprocessing Videos for Multimodal RAG .ipynb  gradio_utils.py  utils.py
rags/: 001_LangchainBasics.ipynb  002_MultiQuery.ipynb  003_Routing.ipynb  004_QueryStructuring4MetadataFiltering.ipynb
