[project]
name = "ai25"
version = "0.1.0"
description = "Jupyter-based AI development environment"
requires-python = ">=3.12"
dependencies = [
    # Jupyter & Dev Tools
    "jupyterlab",
    "jupyterlab-git",
    "jupyterlab-lsp",
    "python-lsp-server",
    "widgetsnbextension",
    "ipykernel",
    "ipywidgets",
    "black",
    "isort",
    "yapf",
    "mypy",
    "pylint",
    "pre-commit",
    "httpx",

    # Core AI/ML
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "xgboost",
    "lightgbm",

    # NLP, LLMs & Vector Databases
    "spacy",
    "nltk",
    "langchain",
    "langchain-community",
    "llama-index",
    "faiss-cpu",
    "qdrant-client",
    "chromadb",

    # Cloud & API Clients
    "boto3",
    "botocore",
    "google-api-python-client",
    "google-auth",
    "google-cloud-aiplatform",
    "google-cloud-storage",
    "openai",
    "fastapi",
    "uvicorn",
    "requests",
    "httpx",
    "websockets",
    "grpcio",

    # Utility & Other Tools
    "tqdm",
    "joblib",
    "pydantic",
    "pyyaml",
    "sqlalchemy",
    "alembic",
    "cryptography",
    "docker",
    "faker",

    # Additional Tools
    "jupyterlab_code_formatter",
    "streamlit",
    "pdfplumber",
    "unstructured",
    "crewai",
    "crewai_tools",
    "jupyterlab_widgets",
    "databricks",
    "databricks.sdk",

    # Web Agents & Automation
    "playwright",
    "tabulate",
    "python-dotenv",
    "multion",
    "gradio",
    "pickleshare",
    "langsmith",
    "instructor",
    "litellm",
    "igraph",

    # DB
    "duckdb",

    # Evals
    "arize-phoenix-client",
    "openinference-instrumentation",
    "arize-phoenix-otel",
    "arize-phoenix",
    "openinference-instrumentation-openai",
    "openinference-semantic-conventions",

    # Middleware
    "starlette",

    # MCP
    "mcp[cli]",
    "sseclient"

]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# # Explicitly control package discovery
[tool.setuptools]
packages = ["ai25"]
