[project]
name = "ai25"
version = "0.1.0"
description = "Jupyter-based AI development environment"
requires-python = ">=3.12"
dependencies = [
    # Jupyter & Dev Tools
    "jupyterlab",
    "jupyterlab-git",
    "jupyterlab-lsp",
    "python-lsp-server",
    "widgetsnbextension",
    "ipykernel",
    "ipywidgets",
    "black",
    "isort",
    "yapf",
    "mypy",
    "pylint",
    "pre-commit",
    "httpx",
    "docarray",

    # Core AI/ML
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "umap-learn",
    "xgboost",
    "lightgbm",

    # NLP, LLMs & Vector Databases
    "spacy",
    "nltk",
    "langchain",
    "langchain-community",
    "langchain-openai ",
    "langchain-core",
    "langchain-text-splitters",
    "llama-index",
    "faiss-cpu",
    "qdrant-client",
    "chromadb",

    # Cloud & API Clients
    "boto3",
    "botocore",
    "google-api-python-client",
    "google-auth",
    "google-cloud-aiplatform",
    "google-cloud-storage",
    "openai",
    "fastapi",
    "uvicorn",
    "requests",
    "httpx",
    "websockets",
    "grpcio",

    # Utility & Other Tools
    "tqdm",
    "joblib",
    "pydantic",
    "pyyaml",
    "sqlalchemy",
    "alembic",
    "cryptography",
    "docker",
    "faker",

    # Additional Tools
    "jupyterlab_code_formatter",
    "streamlit",
    "pdfplumber",
    "unstructured",
    "crewai",
    "crewai_tools",
    "jupyterlab_widgets",
    "databricks",
    "databricks.sdk",

    # Web Agents & Automation
    "playwright",
    "tabulate",
    "python-dotenv",
    "multion",
    "gradio",
    "pickleshare",
    "langsmith",
    "instructor",
    "litellm",
    "igraph",

    # DB
    "duckdb",
    "lancedb",
    "datasets",

    # Evals
    "arize-phoenix-client",
    "openinference-instrumentation",
    "arize-phoenix-otel",
    "arize-phoenix",
    "openinference-instrumentation-openai",
    "openinference-semantic-conventions",

    # Middleware
    "starlette",

    # MCP
    "mcp[cli]",
    "sseclient",

    # Video Analysis
    "Pillow",
    "predictionguard",
    "opencv-python",
    "webvtt-py",
    "moviepy",
    "pytube",
    "pytubefix",
    "youtube-transcript-api",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
